servicemesh/06_circuit-breaker/backend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: backend
spec:
  host: "backend.training.svc.cluster.local"
  subsets:
    - name: v1
      labels:
        version: 1.0.0
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 3
      interval: 3s
      baseEjectionTime: 1m


    # TODO fix PID - Starting Application on backend-1.0.0-77f5f7c45-qqd45 with PID 6 (/srv/app/backend-1.0.0.jar started by root in /srv/app)
